--- a/git_test/index.html
+++ b/git_test/index.html
@@ -4,6 +4,21 @@
 	<title>git</title>
 </head>
 <body>
-
+<div class='container'>
+	<p class='rwin'>
+		<span>ERVIN</span>
+	</p>
+</div>
+<style>
+	 .container {
+		  display: block;
+		  width: 200px;
+		  margin: 50px auto;
+	 }
+	.rwin {
+		 color: red;
+		 position: center;
+	}
+</style>
 </body>
 </html>
